Documentacion parte 2 sharon
